[project]
name = "lru-cache-api"
version = "0.1.0"
description = "REST API для LRU Cache с TTL"
authors = [
    {name = "Lastiz",email = "galaut55@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

